[package]
name = "display-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
usb_enumeration = "0.1.2"
ddc = "0.2.2"
ddc-winapi = "0.2.0"
whoami = "1.2.1"